# simd

./: changelog.md  readme.md  simd.cabal
bench/: Micro.hs
cbits/: simd.h  simd_avx2.c  simd_foo.c  simd_foo.h
src/: Simd.hs
src/Simd/: Internal.hs
test/: Bs.hs  Spec.hs
