cabal-version: 2.2
name:
  simd
version:
  0.1
synopsis:
  GHC Haskell simd library
-- description:
homepage:
  https://github.com/chessai/simd
-- bug-reports:
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
-- copyright:
category:
  SIMD
build-type:
  Simple
extra-source-files:
  changelog.md
  readme.md
  cbits/simd.h
  cbits/simd_debug.h

library
  exposed-modules:
    Simd
    Simd.Internal
  build-depends:
    , base >= 4.10 && < 4.14
    , contiguous >= 0.4 && < 0.6
    , primitive >= 0.7 && < 0.8
    , primitive-foreign >= 0.1 && < 0.2
    , primitive-unlifted >= 0.1 && < 0.2
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2
  include-dirs:
    cbits
  c-sources:
    cbits/simd_avx2.c
    cbits/simd_sse2.c
  cc-options:
    -O3
    -mavx2
    -msse4.2
    -ftree-vectorize

test-suite spec
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
    , base
    , simd
    , primitive
    , contiguous
    , hedgehog
  ghc-options:
    -O2
    -Wall

benchmark micro
  type: exitcode-stdio-1.0
  main-is:
    Micro.hs
  build-depends:
    , base
    , contiguous
    , gauge
    , primitive
    , random
    , random-shuffle
    , simd
  ghc-options:
    -O2
    -Wall
  hs-source-dirs:
    bench

source-repository head
  type:
    git
  location:
    https://github.com/chessai/simd

